proj1/tests/other-tests/MINZ_tests/correct/nested_for.py
x = [[1, 2], [1, 2], [1, 2]]
for lst in x:
	for item in lst:
		print item
