proj1/tests/other-tests/MINZ_tests/error/lists.py
hey4 = [0, 1, 2, 3
hey5 = 0, 1, 2]
hey6 = [0, 1, 2]
hey7 = hey6[::-1]
